--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../styles/form.css" />
     <link rel="stylesheet" href="./login.css" />
     <link rel="stylesheet" href="./validate.js" />
-    <link rel="icon" type="image/png" href="./assets/icons/libro.png" />
+    <link rel="icon" type="image/png" href="../../assets/icons/libro.png" />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -59,7 +59,7 @@
             </div>
 
             <button type="submit" class="filledBtn" style="width: 100%">
-              Create
+              Ingresar
             </button>
           </form>
           <p>
