--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -6,30 +6,26 @@
     <link rel="stylesheet" href="../../styles/form.css" />
     <link rel="stylesheet" href="./signup.css" />
     <link rel="stylesheet" href="./validate.js" />
-    <link
-    rel="icon"
-    type="image/png"
-    href="./assets/icons/libro.png"
-    />
+    <link rel="icon" type="image/png" href="../../assets/icons/libro.png" />
+
     <meta charset="utf-8" />
     <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta
-    name="description"
-    content="Booker's es un sitio web de recetas y restaurantes de comida internacional."
+      name="description"
+      content="Booker's es un sitio web de recetas y restaurantes de comida internacional."
     />
     <meta
-    name="keywords"
-    content="recetas, restaurantes, comida internacional, Booker's"
+      name="keywords"
+      content="recetas, restaurantes, comida internacional, Booker's"
     />
     <title>Booker's</title>
-</head>
+  </head>
 
-<body>
-  <header class="headerContainer">
-  </header>
+  <body>
+    <header class="headerContainer"></header>
     <main>
       <section class="login-data-container">
         <article class="form-container">
@@ -46,7 +42,9 @@
             <div class="countryInput">
               <label for="country"></label>
               <select name="country" id="country">
-                <option value="select" selected disabled>Selecciona tu país</option>
+                <option value="select" selected disabled>
+                  Selecciona tu país
+                </option>
                 <option value="Afghanistan">Afghanistan</option>
                 <option value="Albania">Albania</option>
                 <option value="Algeria">Algeria</option>
@@ -382,7 +380,6 @@
             <!-- repetir contraseña -->
             <div class="repeatpassInput">
               <div id="passwordInput">
-
                 <label for="current-password"></label>
                 <input
                   type="password"
@@ -394,10 +391,13 @@
               </div>
             </div>
 
-            <button type="submit" class="filledBtn" style="width: 100%;">create</button>
+            <button type="submit" class="filledBtn" style="width: 100%">
+              Registrarse
+            </button>
           </form>
           <p>
-            ¿Ya tenés una cuenta? <a class="textBtn" href="/pages/login/login.html">Inicia sesión</a>
+            ¿Ya tenés una cuenta?
+            <a class="textBtn" href="/pages/login/login.html">Inicia sesión</a>
           </p>
         </article>
       </section>
