--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -26,7 +26,7 @@
   <body>
     <header class="headerContainer"></header>
     <main>
-      <section class="login-data-container">
+      <section class="form-data-container">
         <article class="form-container">
           <h2>Inicio de sesión</h2>
           <form id="loginForm">
