--- a/pages/signup/signup.html
+++ b/pages/signup/signup.html
@@ -27,7 +27,7 @@
   <body>
     <header class="headerContainer"></header>
     <main>
-      <section class="login-data-container">
+      <section class="form-data-container">
         <article class="form-container">
           <h2>Registrarse</h2>
           <form action="">
